# Iota

./: .env.dev  .gitignore  Cargo.toml  README.md
src/bins/debug_test/: Cargo.toml
src/bins/debug_test/src/: main.rs
src/bins/iota_desktop/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.css
src/bins/iota_desktop/assets/: tailwind.css
src/bins/iota_desktop/src/: main.rs
src/bins/iota_desktop/src/routes/: blog.rs  mod.rs  navbar.rs
src/bins/iota_desktop/src/widgets/: mod.rs  window_handle.rs
src/bins/iota_gui_client/: Cargo.toml  Dioxus.toml
src/bins/iota_gui_client/assets/: tailwind.css
src/bins/iota_gui_client/src/: main.rs
src/bins/iota_gui_client_test/: Cargo.toml
src/bins/iota_gui_client_test/src/: main.rs
src/bins/iota_gui_client_test/src/ui/: mod.rs  ui_state.rs
src/bins/iota_tester/: Cargo.toml
src/bins/reflector/: .env.prod  Cargo.toml  build.rs  docker-compose.yaml
src/bins/reflector/src/: api_docs.rs  config.rs  error.rs  main.rs  nat_subscriber.rs
src/bins/reflector/src/endpoints/: mod.rs
src/bins/reflector/src/endpoints/account/: get_me.rs  mod.rs
src/bins/reflector/src/endpoints/auth/: mod.rs  post_login.rs  post_refresh_session.rs  post_signup.rs
src/bins/reflector/src/endpoints/nat_sync/: get_ping.rs  mod.rs  ws_subscribe.rs
src/bins/reflector/src/endpoints/social/: get_friends.rs  get_requests.rs  get_requests_request_id_accept.rs  mod.rs  post_friend.rs  post_friends.rs
src/bins/reflector/src/env/: env_vars.rs  load_env_vars.rs
src/bins/reflector/src/middleware/: auth_middleware.rs  funtional_middleware.rs  mod.rs  rate_limiter_middleware.rs
src/bins/reflector/src/nat_subscriber/: mod.rs  nat.rs
src/bins/reflector/src/rolling_rsa/: init.rs  mod.rs  rolling_key_pair.rs  rolling_rsa.rs
src/libs/account/: Cargo.toml
src/libs/account/src/: error.rs  lib.rs
src/libs/account/src/friendships/: accept_friend_request.rs  create_friend_request_db.rs  create_friendship_db.rs  get_account_friendships_db.rs  get_friend_request_by_in_out_db.rs  get_friendship_by_accounts.rs  get_friendship_requests_db.rs  mod.rs
src/libs/account/src/query/: create_account_db.rs  get_account_by_credentials_db.rs  get_account_by_id.rs
src/libs/auth/: Cargo.toml
src/libs/auth/src/: error.rs  lib.rs
src/libs/auth/src/account/: create_account_db.rs  does_account_exist_db.rs  get_account_by_credentials_db.rs  get_account_by_id.rs  mod.rs
src/libs/auth/src/jwt/: create_jwt.rs  decode_jwt.rs  mod.rs
src/libs/auth/src/key_pair_db/: get_latest_key_pair_db.rs  save_key_pair_db.rs
src/libs/auth/src/refresh_token/: create_refresh_token_db.rs  delete_refresh_token_db.rs  get_refresh_token_data_db.rs  mod.rs
src/libs/auth/src/rsa_key_pair/: RsaKeyPair.rs  generate_rsa_key_pair.rs  get_latest_rsa_key_pair_db.rs  mod.rs  rsa_key_pair.rs  save_rsa_key_pair_db.rs
src/libs/core/: Cargo.toml
src/libs/crypto/: Cargo.toml
src/libs/crypto/src/: compare_argon2_hash.rs  lib.rs
src/libs/crypto/src/hashing/: argon2_hash.rs
src/libs/crypto/src/kem/: mod.rs
src/libs/crypto/src/kem/ml_kem1024/: decrypt_ml_kem1024.rs  encrypt_ml_kem1024.rs  generate_ml_kem1024_key_pair.rs
src/libs/crypto/src/sign/: mod.rs
src/libs/crypto/src/sign/dilithium3/: generate_dilithium3_key_pair.rs  sign_dilithium3.rs  validate_dilithium3_sign.rs
src/libs/crypto/src/sign/falcon512/: generate_falcon512_key_pair.rs  sign_falcon512.rs  validate_falcon512_sign.rs
src/libs/crypto/src/sign/rsa/: generate_rsa_key_pair.rs  sign_rsa.rs  validate_rsa_sign.rs
src/libs/db/: Cargo.toml
src/libs/db/src/: create_postgres_pool.rs  error.rs  init_postgres_db.rs  init_tables.rs  lib.rs
src/libs/db/src/tables/: accounts.rs  friendship_requests.rs  friendships.rs  key_pair.rs  mod.rs  refresh_tokens.rs  rsa_key_pair.rs
src/libs/error/: Cargo.toml
src/libs/error/src/: error.rs
src/libs/gateway/: Cargo.toml
src/libs/gateway/src/rate_limiter/: mod.rs
src/libs/gateway/src/rate_limiter/leaky_bucket/: bucket.rs  leaky_bucket_rate_limiter.rs  mod.rs
src/libs/hooks/: Cargo.toml
src/libs/hooks/src/: lib.rs  use_state.rs
src/libs/iota_core/: Cargo.toml
src/libs/storage/: Cargo.toml
src/libs/storage/src/: error.rs  init_pool.rs  lib.rs
src/libs/storage/src/tables/: accounts.rs
src/libs/utils/: Cargo.toml
src/libs/utils/src/: insure_len.rs  lib.rs
