[workspace]
name = "Iota"
resolver = "3"
members = [
    "src/bins/iota_desktop",
    "src/bins/iota_tester",
    "src/bins/reflector",
    "src/libs/auth",
    "src/libs/crypto",
    "src/libs/db",
    "src/libs/gateway",
    "src/libs/core",
    "src/libs/utils",
    "src/libs/account",
    "src/libs/storage",
]

[workspace.dependencies]
auth = { path = "src/libs/auth" }
crypto = { path = "src/libs/crypto" }
db = { path = "src/libs/db" }
account = { path = "src/libs/account" }
gateway = { path = "src/libs/gateway" }
core = { path = "src/libs/core" }
utils = { path = "src/libs/utils" }

# Asynchronous and perralelism
tokio = { version = "1.47.1", features = [
    "macros",
    "net",
    "rt",
    "sync",
    "time",
    "io-util",
    "test-util",
], default-features = false }
dashmap = "6.1.0"

# Logging
env_logger = "0.11.8"
log = "0.4.27"

# Serialization and encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"

# Env
envconfig = "0.11.0"
dotenv = "0.15.0"

# Types
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

# Errors
thiserror = "2.0.15"

# Misc
lazy_static = "1.5.0"
utoipa = { version = "5.2.0", features = ["chrono", "uuid"] }

# Storage
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
] }


[profile.dev]
opt-level = 0

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.dev.package.sqlx-macros]
opt-level = 3
