[package]
name = "reflector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
envconfig = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }

actix-web = "4.11.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
utoipa = { version = "5.2.0", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "vendored"] }
actix-cors = "0.7.0"
actix-ws = "0.3.0"
# console-subscriber = "0.4.1"

db = { workspace = true }
auth = { workspace = true }
utils = { workspace = true }
gateway = { workspace = true }
crypto = { workspace = true }
account = { workspace = true }
