[package]
name = "account"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
db = { workspace = true }
serde = { workspace = true }
crypto = { workspace = true, features = ["argon2"] }
utoipa = { workspace = true }
