[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9.3.1"
openssl = "0.10.73"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
chrono = "0.4.41"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.27"

error = { path = "../../libs/error" }
db = { path = "../../libs/db" }
crypto = { path = "../../libs/crypto" }
