[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# jsonwebtoken = "9.3.1"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

oqs = "0.11"
openssl = "0.10.73"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }

crypto = { workspace = true, features = ["falcon512", "argon2"] }
db = { workspace = true }
