[package]
name = "error"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
openssl = "0.10.73"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
